2009-04-16  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/x86_64-defs.m4 (JUMPTABSECT): New define.
	* mpn/x86_64/darwin.m4: Likewise.
	* mpn/x86_64/sqr_basecase.asm: Rework switch code using JUMPTABSECT.

	* tune/common.c (speed_mpn_hgcd, speed_mpn_hgcd_lehmer):
	Remove an unused variable.

	* mpn/x86/x86-defs.m4 (LEA): Get SIZE arguments right.

2009-04-14  Torbjorn Granlund  <tege@gmplib.org>

	* Version 4.3.0 released.

	* scanf/doscan.c (__gmp_doscan): Pad 3-operand scanf call with dummy
	argument.
	* scanf/sscanffuns.c (scan): Disable vsscanf variant for now.

2009-04-13  Torbjorn Granlund  <tege@gmplib.org>

	* scanf/sscanffuns.c (scan): Rewrite to use stdarg.

	* tests/mpz/t-root.c: Rewrite.  Add unconditional gcc 4.3.2 tests.

2009-04-09  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/powm.c: New file.
	* mpn/generic/powlo.c: New file.
	* mpn/generic/powm_sec.c: New file.
	* configure.in (gmp_mpn_functions): List new functions.

2009-04-08  Torbjorn Granlund  <tege@gmplib.org>

	* mpz/urandomm.c: Amend last fix.

2009-04-06  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in: Support Sun cc for x86_64.

	* mpz/urandomm.c: Handle operand overlap.

2009-03-11  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in (powerpc): Brave removing -Wa,-mppc64, in the hope that
	GCC now passes the proper options.

2009-03-09  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/divrem_1.asm: Add a nop to save a cycle in unnormalized
	case.

2009-03-05  Torbjorn Granlund  <tege@gmplib.org>

	* ia64/gmp-mparam.h, arm/gmp-mparam.h, x86/p6/mmx/gmp-mparam.h,
	pa32/hppa2_0/gmp-mparam.h sparc32/v9/gmp-mparam.h: Update.

2009-03-03  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/ia64/bdiv_dbm1c.asm: Accept/return carry.

2009-03-02  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in (64-bit sparc/solaris): Pass -xO3, not -O3 to solaris
	system compiler.

2009-03-01  Torbjorn Granlund  <tege@gmplib.org>
